Update stores to support new event-sourced state model
